[package]
name = "bellissimo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn-db = "0.1.4"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
fake-useragent = "0.1.3"
geoip2 = "0.1.7"
isbot = "0.1.3"
lazy_static = "1.4.0"
mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
nanoid = "0.4.0"
once_cell = "1.19.0"
redis = "0.25.3"
reqwest = "0.12.4"
rocket = "0.5.0"
rocket_db_pools = "0.1.0"
serde = "1.0.202"
serde_json = "1.0.117"
tor-geoip = "0.18.0"
