[package]
name = "bellissimo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn-db = "0.1.4"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
fake-useragent = "0.1.3"
geoip2 = "0.1.7"
isbot = "0.1.3"
lazy_static = "1.4.0"
mongodb = {version = "2.8.2", features = ["sync"], default-features = false}
nanoid = "0.4.0"
num_cpus = "1.16.0"
once_cell = "1.19.0"
redis = "0.25.3"
reqwest = "0.12.4"
rocket = "0.5.0"
serde = "1.0.202"
serde_json = "1.0.117"
toml = "0.8.13"
v8 = "0.92.0"
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
uaparser = "0.6.3"
fastcgi-client = "0.9.0"
tokio = { version = "1.38.0", features = ["full"] }
elasticsearch = "8.5.0-alpha.1"
